v3.0.5   - Made PSD, XCF and TIFF reader read the position and bounding
	   box of layers correctly.
	 - Made ICC Profiles not crash on embeded profiles.
	 - Made OpenEXR saver optionally save all layers into OpenEXR
	   v2 parts model.  This makes images with multiple layers be
	   extremely efficient.
	 - Bug fixed audio display leaving the window and crashing
	   when playing float audio.

v3.0.4   - Made PSD and TIFF reader read alpha channels correctly and
	   support R,G,B,A in layers.
	 - Bug fixed background image compositing which had gotten
	   broken in the stereo transition.

v3.0.3   - Made increasing fps in media info window not reduce the 
	   number of frames played (bug).
	 - Added a waveform display to audio only playback, similar 
	   to the one in ffplay.
	 - Bug fixed some uses of AVPackets.

v3.0.2   - Bug fixed a problem when playing audio files that would
	   sometimes play them way too fast.
	 - Bug fixed playback of sequences with audio and videos when
	   looping that would loose sync and report NANs and play
	   them way too fast.
	 - Bug fixed EDL's timeline tick mark on playback of such EDL.

v3.0.1   - Allowed loading and saving files with the Windows' native
	   file browser.
	 - Made Preferences a tad more eye friendly by replacing all
	   checkbuttons with raised/pushed checkbuttons.
	 - Made Preferences more eye friendly by rearranging the size
	   of buttons and options.
	 - Made timeline text a bit bigger and more spaced.
	 - Bug fixed rgba shader to not force alpha to 1 when alpha is 0.
	   This prevented subtitles from showing up properly.
	 - Removed the option to reload files when changed on disk as
	   it would create half images and errors.

v3.0.0   - Bug fixed alpha in shaders for stereo display.  Previously
	   a border would surround images.
	 - Bug fixed main Rectangle class.  Previously it could not
	   merge properly.
	 - Made display_window and data_window functions take a frame.